feat: Enable periodic updates for Wled Widget
The widget will now update automatically every 30 minutes (1800000 ms) instead of not updating periodically.

--- a/app/src/main/res/xml/wled_widget_info.xml
+++ b/app/src/main/res/xml/wled_widget_info.xml
@@ -6,7 +6,7 @@
     android:minHeight="40dp"
     android:resizeMode="horizontal|vertical"
     android:previewImage="@mipmap/ic_launcher_rgb"
-    android:updatePeriodMillis="0"
+    android:updatePeriodMillis="1800000"
     android:widgetCategory="home_screen"
     android:configure="ca.cgagnier.wlednativeandroid.widget.WledWidgetConfigureActivity">
 </appwidget-provider>
