--- a/app/src/main/res/xml/wled_widget_info.xml
+++ b/app/src/main/res/xml/wled_widget_info.xml
@@ -2,8 +2,10 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:description="@string/widget_description"
     android:initialLayout="@layout/glance_default_loading_layout"
-    android:minWidth="110dp"
+    android:minWidth="70dp"
     android:minHeight="40dp"
+    android:targetCellWidth="3"
+    android:targetCellHeight="1"
     android:resizeMode="horizontal"
     android:previewImage="@mipmap/ic_launcher_rgb"
     android:updatePeriodMillis="1800000"
